# EchEngine-GL

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Application.cpp  Application.h
src/Dependencies/GLAD/include/glad/: glad.h
src/Dependencies/GLAD/src/: glad.c
